# -

./: .gitignore  BANK_INTEGRATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  STEP_BY_STEP_GUIDE.md  TECHNICAL_DESCRIPTION.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
YessLoyaltyApp/: .gitignore
YessLoyaltyApp/ViewModels/: PartnersViewModel.cs
admin-panel/: QUICK_START.md  README.md  TEST_INSTRUCTIONS.md  package-lock.json
backend/: .env.example
backend/alembic/versions/: add_complete_systems.py  add_payment_system.py  (+1 more)
backend/app/: main.py
screenshots/: README.md
tests/: integration_tests.py  load_testing.py
yess-backend/: .env.example  .flake8  .gitignore  Dockerfile  INFRASTRUCTURE.md  README.md  create_admin.py  docker-compose.prod.yml  docker-compose.yml  env.example  pyproject.toml  requirements.txt
yess-backend/app/: main.py
yess-backend/app/api/admin/: __init__.py  admin_routes.py  partner_admin_routes.py
yess-backend/app/api/v1/: __init__.py  auth.py  qr.py
yess-backend/app/core/: cache_manager.py  config.py  database.py  exceptions.py  logger.py  optimization.py  performance.py  performance_monitor.py  security.py
yess-backend/app/models/: partner.py  user.py
yess-backend/app/schemas/: partner.py
yess-backend/app/services/: auth_service.py  cache_service.py  geolocation_optimizer.py  geolocation_service.py  payment_service.py  unified_api_service.py
yess-backend/docs/: admin_guide.md
yess-backend/monitoring/: alert_rules.yml  prometheus.yml
yess-backend/scripts/: backup.sh  dev.ps1  dev.sh
yess-backend/tests/: test_performance.py
yess-backend/tests/integration/: test_partner_flow.py
yess-backend/tests/load_testing/: locustfile.py
(+10 files in other folders)
